# miniature-octo-bassoon

./: .pre-commit-config.yaml  alp2gpx.py  update.sh
gpx_plot/: dune-project
gpx_plot/attic/marly/: marly.gpx  marly.sh  marly.tex  marly_x48.gpx  triangle.gpx
gpx_plot/lib/: dune  gps.ml  main_tex.ml  main_tex.mli  model.ml  model.mli  mp.ml  mp.mli  reader.ml  work.ml  work.mli
gpx_plot/test/la-cascade/: conf.yml  dune  input.gpx  run.sh
gpx_plot/test/le-carrosse/: conf.yml  dune  input.gpx  run.sh
src/lib/: dune  model.ml  reader.ml  sheet.mli
src/test/marly/: dune
yaml_of_trkbin/: dune-project
yaml_of_trkbin/attic/marly/: le-carrosse.gpx.kml  marly.sh
yaml_of_trkbin/lib/: dune  gps.ml  gps.mli  model.ml  model.mli  mp.ml  mp.mli  reader.ml
yaml_of_trkbin/test/: dune
yaml_of_trkbin/test/la-cascade/: dune  la-cascade.tex  run.sh
yaml_of_trkbin/test/le-carrosse/: le-carrosse-balises.gpx  le-carrosse.eps  le-carrosse.tex  run.sh
yaml_of_trkbin/test/marly/: dune  le-carrosse.gpx  marly.sh  marly.tex  marly.trk  marly2.gpx  triangle.gpx
